<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="7dp"
    android:weightSum="1"
    tools:context="com.rwsw.fantasysurvivor.activity.HomeActivity"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_gravity="center"
        android:gravity="center_horizontal|end"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.97">

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getting_group_id"
                android:id="@+id/gettingGroupID"
                android:layout_gravity="center_vertical"
                android:textSize="16dp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/groupProgressBar"
                android:layout_gravity="center_vertical"
                android:indeterminate="true" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:id="@+id/introText"
        android:layout_gravity="center_vertical"
        android:textSize="20dp"
        android:visibility="invisible"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_gravity="center"
        android:gravity="center_horizontal|center_vertical"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:id="@+id/existing_group"
            android:text="@string/existing_group"
            android:onClick="joinExistingGroup"
            android:visibility="invisible" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:id="@+id/new_group"
            android:text="@string/new_group"
            android:onClick="joinNewGroup"
            android:visibility="invisible" />

    </LinearLayout>


</LinearLayout>