<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="7dp"
    android:weightSum="1"
    tools:context="com.rwsw.fantasysurvivor.activity.JoinGroupActivity"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.97">

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="entergrouptext"
                android:id="@+id/enterGroupText"
                android:layout_gravity="center_vertical"
                android:textSize="20dp" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.97">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:text="@string/groupnamelabel"
                android:id="@+id/groupnamelabel"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.045"
                android:layout_height="match_parent" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:id="@+id/groupnameinput"
                android:layout_gravity="center_vertical"
                android:textSize="20dp" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.045"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.97">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:text="@string/groupidlabel"
                android:textSize="20dp"
                android:layout_gravity="center_vertical|end"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.045"
                android:layout_height="match_parent" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:id="@+id/groupIdInput"
                android:layout_gravity="center_vertical"
                android:textSize="20dp" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.045"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_gravity="center"
        android:gravity="center_horizontal|center_vertical"
        android:weightSum="0.97">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.77"
            android:id="@+id/joingroup"
            android:text="@string/join_group"
            android:onClick="enterGroup" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>

    </LinearLayout>


</LinearLayout>